[project]
name = "multi-agent-rag-template-main"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=3.4.3",
    "llama-index>=0.12.35",
    "loguru>=0.7.3",
    "numpy>=2.2.5",
    "pinecone>=6.0.2",
    "sentence-transformers>=4.1.0",
    "swarm-models>=0.3.2",
    "swarms>=7.7.6",
    "tiktoken>=0.9.0",
]
